<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.StartFragment">

            <Button
                android:id="@+id/oneCupcakeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="@{()->viewModel.setNumberOfCupcakes(1)}"
                android:text="@string/one_cupcake"
                app:layout_constraintBottom_toTopOf="@+id/sixCupcakesButton"
                app:layout_constraintEnd_toEndOf="@+id/orderCupcakesTextView"
                app:layout_constraintStart_toStartOf="@+id/orderCupcakesTextView"
                app:layout_constraintTop_toBottomOf="@+id/orderCupcakesTextView"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/sixCupcakesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{()->viewModel.setNumberOfCupcakes(6)}"
                android:text="@string/six_cupcakes"
                app:layout_constraintBottom_toTopOf="@+id/twelveCupcakesButton"
                app:layout_constraintEnd_toEndOf="@+id/oneCupcakeButton"
                app:layout_constraintStart_toStartOf="@+id/oneCupcakeButton"
                app:layout_constraintTop_toBottomOf="@+id/oneCupcakeButton" />

            <Button
                android:id="@+id/twelveCupcakesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{()->viewModel.setNumberOfCupcakes(12)}"
                android:text="@string/twelve_cupcakes"
                app:layout_constraintEnd_toEndOf="@+id/sixCupcakesButton"
                app:layout_constraintStart_toStartOf="@+id/sixCupcakesButton"
                app:layout_constraintTop_toBottomOf="@+id/sixCupcakesButton" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:contentDescription="@string/image_of_cupcake"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cupcake" />

            <TextView
                android:id="@+id/orderCupcakesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/order_cupcakes"
                android:textAppearance="?attr/textAppearanceHeadline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <data>

        <variable
            name="viewModel"
            type="com.alexaat.cupcakeapp.model.OrderViewModel" />
    </data>
</layout>