<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.FlavorFragment">


            <Button
                android:id="@+id/cancelButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{()->viewModel.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/nextButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtotalTextView" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{()->viewModel.navigateToPickupDate()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelButton" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/vanillaRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(Flavor.VANILLA)}"
                    android:onClick="@{()->viewModel.setFlavor(Flavor.VANILLA)}"
                    android:text="@string/vanilla"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <RadioButton
                    android:id="@+id/chocolateRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(Flavor.CHOCOLATE)}"
                    android:onClick="@{()->viewModel.setFlavor(Flavor.CHOCOLATE)}"
                    android:text="@string/chocolate"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <RadioButton
                    android:id="@+id/redVelvetRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(Flavor.RED_VELVET)}"
                    android:onClick="@{()->viewModel.setFlavor(Flavor.RED_VELVET)}"
                    android:text="@string/red_velvet"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <RadioButton
                    android:id="@+id/saltedCaramelRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(Flavor.SALTED_CARAMEL)}"
                    android:onClick="@{()->viewModel.setFlavor(Flavor.SALTED_CARAMEL)}"
                    android:text="@string/salted_caramel"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <RadioButton
                    android:id="@+id/coffeeRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(Flavor.COFFEE)}"
                    android:onClick="@{()->viewModel.setFlavor(Flavor.COFFEE)}"
                    android:text="@string/coffee"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </RadioGroup>


            <TextView
                android:id="@+id/subtotalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="15.00" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <data>

        <import type="com.alexaat.cupcakeapp.Util.Flavor" />

        <variable
            name="viewModel"
            type="com.alexaat.cupcakeapp.model.OrderViewModel" />
    </data>
</layout>